--- a/MCS_K8sEdge_Bernd_KLAUS.tex
+++ b/MCS_K8sEdge_Bernd_KLAUS.tex
@@ -327,7 +327,7 @@ The above-mentioned challenges provide a good starting point for defining the ne
 \chapter{Methodology}
 \label{sec:dsrmethode}
 \section{Design Science Research}
-As described in \autoref{sec:methodology}, \ac{DSR} is used as a scientific method to create the \ac{PoC}. \ac{DSR} describes itself as follows: "A common topic when performing research in technical disciplines is to design some kind of artefact, such as a model, an information system, or a method for performing a certain task. To address this topic in a systematic and scientific way, Design Science Research (DSR) has stablished itself as an appropriate research method" \cite{dsr-method}. Following the paradigm two environments are built as described in \autoref{sec:dsrenv}, each representing one of the architectures listed in \autoref{sec:architecture}. A test-deployment is then applied to both environments and tested against specific use-cases to be found in \autoref{sec:dsrusecase}. The findings are finally interpreted and summarised in \autoref{sec:dsranalysis} and serve as a basis for the catalog in \autoref{chap:catalogue}.\par
+As described in \autoref{sec:methodology}, \ac{DSR} is used as a scientific method to create the \ac{PoC}. \ac{DSR} describes itself as follows: "A common topic when performing research in technical disciplines is to design some kind of artefact, such as a model, an information system, or a method for performing a certain task. To address this topic in a systematic and scientific way, Design Science Research (DSR) has established itself as an appropriate research method" \cite{dsr-method}. Following the paradigm two environments are built as described in \autoref{sec:dsrenv}, each representing one of the architectures listed in \autoref{sec:architecture}. A test-deployment is then applied to both environments and tested against specific use-cases to be found in \autoref{sec:dsrusecase}. The findings are finally interpreted and summarised in \autoref{sec:dsranalysis} and serve as a basis for the catalog in \autoref{chap:catalogue}.\par
 It is essential in the procedure that the environments can be refined and adapted during the execution of the test scenarios. This is listed and described in the respective chapters insofar as adaptations have been made. The starting point is always the simplest form of implementation or the standard version without any adaptations for both architectures.
 
 \section{Requirements}
@@ -357,7 +357,7 @@ The security requirements are defined according to the security measures or reco
 \section{Testing and Research}
 In order to fully check the requirements, tests are carried out at the \ac{PoC} in the following categories: resource utilisation, network and connectivity, application stability and IT-Security. The focus is on exploring the peculiarities and behaviour of the respective environment. As far as possible, quantitative data is collected, which is then evaluated. The focus is not on implementing the most complicated applications available, but on testing the main functionalities of \ac{K8s} itself. Therefore, using the most commonly used configuration objects is sufficient.
 
-\section{Headings covered}
+\section{Main categories covered}
 Based on the requirements and including the results collected in the \ac{PoC}, the following categories are considered in the catalogue.
 
 \begin{itemize}
